linting, todo: add second example without bar

--- a/index.html
+++ b/index.html
@@ -9,22 +9,39 @@
 </head>
 <body>
     <div class="container">
-        <div class="progress-container">
-            <div class="progress" id="progress">
+        <div class="panel">
+            <div class="progress-container">
+                <div class="progress" id="progress">
+                </div>
+                <div class="circle active ">1</div>
+                <div class="circle ">2</div>
+                <div class="circle ">3</div>
+                <div class="circle ">4</div>
+                <div class="circle ">5</div>
             </div>
-            <div class="circle active ">1</div>
-            <div class="circle ">2</div>
-            <div class="circle ">3</div>
-            <div class="circle ">4</div>
-            <div class="circle ">5</div>
+
+            <button class="btn" id="prev" disabled>Prev</button>
+            <button class="btn" id="next" >Next</button>
         </div>
-
-        <button class="btn" id="prev" disabled>Prev</button>
-        <button class="btn" id="next" >Next</button>
-
-       
-
     </div>
+
+<!-- Work in progress haha - to show example with out height:4px;
+    <div class="container2">
+        <div class="panel">
+            <div class="progress-container">
+                <div class="progress" id="progress2">
+                </div>
+                <div class="circle2 active ">1</div>
+                <div class="circle2 ">2</div>
+                <div class="circle2 ">3</div>
+                <div class="circle2 ">4</div>
+                <div class="circle2 ">5</div>
+            </div>
+
+            <button class="btn" id="prev2" disabled>Prev</button>
+            <button class="btn" id="next2" >Next</button>
+        </div>
+    </div> -->
 
     
     <script src="src/script.js"></script>
